Final commit plx

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 document.getElementById("mijnoutput").innerHTML = mijnObject.firstName + " : " + mijnObject.lastName;
             }
         }
-        var2.open("GET", "http://localhost:8080/randomEndpoint2/", true);
+        var2.open("GET", "https://bramremon.azurewebsites.net/randomEndpoint", true);
         var2.send();
     }
 </script>
